submenu not showing if only one element, hidden a element margin fixed

--- a/indians/static/scss/components/info_page.scss
+++ b/indians/static/scss/components/info_page.scss
@@ -9,6 +9,9 @@
         > * {
           margin: 40px 0 100px;
         }
+        > a {
+          margin: 0;
+        }
         h2 {
           background-color: black;
           color: white;
